# R-Type

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  rtype_documentation.odt
inc/: rtype.hpp
inc/client/: DoubleLaser.hpp  Entity.hpp  GObject.hpp  Game.hpp  Laser.hpp  LivingEntity.hpp  Projectile.hpp  TObject.hpp  map.hpp  rtype_client.hpp
inc/server/: Ennemy.hpp  Laser.hpp  Player.hpp  rtype_server.hpp
res/map/: map1.txt  map2.txt
src/client/: DoubleLaser.cpp  Entity.cpp  GObject.cpp  Game.cpp  Laser.cpp  LivingEntity.cpp  Projectile.cpp  TObject.cpp  main.cpp  map.cpp  rtype_client.cpp
src/server/: main.cpp  rtype_server.cpp
